# tap-as-a-service

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  API_REFERENCE.rst  CONTRIBUTING.rst  HACKING.rst  INSTALL.rst  MANIFEST.in  README.md  README.rst  django-manage.py  install.sh  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
deliverables/queens/: tap-as-a-service.yaml
deliverables/rocky/: tap-as-a-service.yaml
deliverables/stein/: tap-as-a-service.yaml
devstack/: README.rst  devstackgaterc  plugin.sh  settings
doc/source/: api_reference.rst  conf.py  index.rst  installation.rst  presentations.rst  usage.rst
doc/source/usage/osc/: tapflow.rst  tapservice.rst
etc/: policy.json  taas.ini  taas_plugin.ini
etc/neutron/rootwrap.d/: taas-i40e-sysfs.filters
neutron_taas/: __init__.py  _i18n.py  opts.py
neutron_taas/cmd/: taas_tcpdump.py
neutron_taas/common/: constants.py  topics.py  utils.py
neutron_taas/db/: head.py  taas_db.py
neutron_taas/db/migration/: taas_init_ops.py
neutron_taas/db/migration/alembic_migration/: env.py  script.py.mako
neutron_taas/db/migration/alembic_migration/versions/: 1817af933379_remove_network_id_from_tap_service.py  2ecce0368a62_add_foreign_key_constraint_on_tap_id_association.py  CONTRACT_HEAD  EXPAND_HEAD  HEAD  start_neutron_taas.py
neutron_taas/extensions/: taas.py  vlan_filter.py
neutron_taas/neutron_dependencies/: constants.py  neutron.conf  neutron_taas_db_init.py  patch_conf_file.sh  repos.py  taas.conf  topics.py
neutron_taas/osc/: common.py  plugin.py
neutron_taas/osc/taas/: tapflow.py  tapservice.py
neutron_taas/services/taas/: taas_plugin.py
neutron_taas/services/taas/agents/: TaasAgent.sh  taas_agent_api.py
neutron_taas/services/taas/agents/common/: agent.py  taas_agent.py  taas_common_agent.py
neutron_taas/services/taas/agents/extensions/: taas.py
neutron_taas/services/taas/agents/ovs/: agent.py  taas_ovs_agent.py
neutron_taas/services/taas/common/: config.py
neutron_taas/services/taas/drivers/: taas_base.py
neutron_taas/services/taas/drivers/linux/: ovs_constants.py  ovs_taas.py  ovs_utils.py  sriov_nic_constants.py  sriov_nic_exceptions.py  sriov_nic_taas.py  sriov_nic_utils.py
neutron_taas/services/taas/service_drivers/: __init__.py  service_driver_context.py  taas_agent_api.py  taas_rpc.py
neutron_taas/taas_cli/: openrc.sh  taas_cli.py
neutron_taas/taas_client/: client.py  tapflow.py  tapservice.py
neutron_taas/tests/: base.py  test_neutron_taas.py
neutron_taas/tests/functional/taas_client/: test_tapservice.py
neutron_taas/tests/tempest_plugin/: config.py  plugin.py
neutron_taas/tests/tempest_plugin/services/: client.py
neutron_taas/tests/tempest_plugin/tests/: taas_client.py
neutron_taas/tests/tempest_plugin/tests/api/: base.py  test_taas.py
neutron_taas/tests/tempest_plugin/tests/scenario/: base.py  test_taas.py
neutron_taas/tests/unit/: test_policy.py
neutron_taas/tests/unit/db/: test_migrations.py  test_taas_db.py
neutron_taas/tests/unit/extensions/: test_taas.py  test_vlan_filter.py
neutron_taas/tests/unit/osc/: fakes.py  test_tap_flow.py  test_tap_service.py
neutron_taas/tests/unit/services/drivers/: test_linux_sriov_nic_driver.py  test_linux_sriov_utils.py
neutron_taas/tests/unit/services/taas/: test_taas_plugin.py
neutron_taas/tests/unit/taas_client/: test_cli20.py  test_cli20_tapflow.py  test_cli20_tapservice.py
neutron_taas_dashboard/: README.rst  __init__.py  post_install.sh
neutron_taas_dashboard/api/: __init__.py  taas.py
neutron_taas_dashboard/dashboards/project/instances/: tables.py  tabs.py  urls.py  views.py  workflows.py
neutron_taas_dashboard/dashboards/project/instances/tapflows/: tables.py
neutron_taas_dashboard/dashboards/project/network_topology/: urls.py  utils.py  views.py
neutron_taas_dashboard/dashboards/project/network_topology/tapflows/: tables.py
neutron_taas_dashboard/dashboards/project/network_topology/tapservices/: tables.py
neutron_taas_dashboard/dashboards/project/tapservices/: overrides.py  panel.py  tables.py  urls.py  utils.py  views.py  workflows.py
neutron_taas_dashboard/dashboards/project/tapservices/tapflows/: tables.py  tabs.py  urls.py  views.py  workflows.py
neutron_taas_dashboard/enabled/: _1480_project_tapservices_panel.py
neutron_taas_dashboard/locale/ja/LC_MESSAGES/: django.po  djangojs.po
neutron_taas_dashboard/static/dashboard/project/network_topology/: horizon.flatnetworktopology.js  horizon.networktopology.js
neutron_taas_dashboard/templates/project/instances/: _taas_detail_overview.html
neutron_taas_dashboard/templates/project/instances/tapflows/: detail.html
neutron_taas_dashboard/templates/project/network_topology/: _taas_actions_list.html  _taas_svg_element.html  _topology_view.html  index.html
neutron_taas_dashboard/templates/project/network_topology/client_side/: _balloon_container.html  _balloon_tapflow.html  _balloon_tapservice.html
neutron_taas_dashboard/tests/: base.py  settings.py  test_neutron_taas_dashboard.py  urls.py
neutron_taas_dashboard/tests/integration_tests/: horizon.conf
neutron_taas_dashboard/tests/integration_tests/tests/: test_tapflows.py  test_tapservices.py  test_tapservices_tapflows.py
playbooks/legacy/tempest-dsvm-tap-as-a-service/: run.yaml
releasenotes/notes/: bp-port-mirroring-sriov-vf-879bc2aa53c2c8d4.yaml  clear-tap-resources-on-port-delete-9583cdd7cd6098ea.yaml
releasenotes/source/: conf.py  index.rst
specs/: index.rst
specs/mitaka/: tap-as-a-service.rst
taas_dashboard/: INSTALL.rst  taas_dashboard.patch
taas_dashboard/horizon/static/horizon/js/: horizon.networktopology.js
taas_dashboard/openstack_dashboard/api/: network.py  network_base.py  neutron.py
taas_dashboard/openstack_dashboard/conf/: neutron_policy.json
taas_dashboard/openstack_dashboard/dashboards/admin/: dashboard.py
taas_dashboard/openstack_dashboard/local/: local_settings.py.example
tools/: sanity-checks.sh  tox_install.sh  tox_install_project.sh
(+35 files in other folders)
