[metadata]
name = tap-as-a-service
summary = Tap-as-a-Service (TaaS) is an extension to the OpenStack network service (Neutron), it provides remote port mirroring capability for tenant virtual networks.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    neutron_taas
data_files =
    etc/neutron_taas =
        etc/policy.json


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[build_releasenotes]
build-dir = releasenotes/build
source-dir = releasenotes/source
all_files = 1

[compile_catalog]
directory = neutron_taas/locale
domain = neutron_taas

[update_catalog]
domain = neutron_taas
output_dir = neutron_taas/locale
input_file = neutron_taas/locale/neutron_taas.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_taas/locale/neutron_taas.pot

[entry_points]
neutron.agent.l2.extensions =
    taas = neutron_taas.services.taas.agents.extensions.taas:TaasAgentExtension
neutron_taas.taas.agent_drivers =
    ovs = neutron_taas.services.taas.drivers.linux.ovs_taas:OvsTaasDriver
neutron.service_plugins =
    taas = neutron_taas.services.taas.taas_plugin:TaasPlugin
neutron.db.alembic_migrations =
    tap-as-a-service = neutron_taas.db.migration:alembic_migration
tempest.test_plugins =
    tap-as-a-service = neutron_taas.tests.tempest_plugin.plugin:NeutronTaaSPlugin
neutronclient.extension =
    tap_service = neutron_taas.taas_client.tapservice
    tap_flow = neutron_taas.taas_client.tapflow
openstack.cli.extension =
    neutronclient = neutron_taas.osc.plugin
openstack.neutronclient.v2 =
    tap_flow_create = neutron_taas.osc.taas.tapflow:CreateTapFlow
    tap_flow_delete = neutron_taas.osc.taas.tapflow:DeleteTapFlow
    tap_flow_list = neutron_taas.osc.taas.tapflow:ListTapFlow
    tap_flow_set = neutron_taas.osc.taas.tapflow:SetTapFlow
    tap_flow_show = neutron_taas.osc.taas.tapflow:ShowTapFlow
    tap_service_create = neutron_taas.osc.taas.tapservice:CreateTapService
    tap_service_delete = neutron_taas.osc.taas.tapservice:DeleteTapService
    tap_service_list = neutron_taas.osc.taas.tapservice:ListTapService
    tap_service_set = neutron_taas.osc.taas.tapservice:SetTapService
    tap_service_show = neutron_taas.osc.taas.tapservice:ShowTapService

[pbr]
autodoc_index_modules = True
warnerrors = True
