[metadata]
name = tap-as-a-service
summary = Tap-as-a-Service (TaaS) is an extension to the OpenStack network service (Neutron), it provides remote port mirroring capability for tenant virtual networks.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    neutron_taas

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = neutron_taas/locale
domain = neutron_taas

[update_catalog]
domain = neutron_taas
output_dir = neutron_taas/locale
input_file = neutron_taas/locale/neutron_taas.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_taas/locale/neutron_taas.pot

[entry_points]
console_scripts =
    neutron-taas-agent = neutron_taas.services.taas.agents.common.agent:main
neutron.service_plugins =
    taas = neutron_taas.services.taas.taas_plugin:TaasPlugin
neutron.db.alembic_migrations =
    tap-as-a-service = neutron_taas.db.migration:alembic_migration
tempest.test_plugins =
    tap-as-a-service = neutron_taas.tests.tempest_plugin.plugin:NeutronTaaSPlugin
neutronclient.extension =
    tap_service = neutron_taas.taas_client.tapservice
    tap_flow = neutron_taas.taas_client.tapflow

[pbr]
autodoc_index_modules = True
warnerrors = True

